# MF-KAN

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py  test1_jump_function.py  test2_nonlinear_correlation.py  test3_2d_nonlinear.py
mfkan/: __init__.py  version.py
mfkan/configs/: __init__.py  config.py
mfkan/models/: __init__.py  kan_backend.py  linear_kan.py  mfkan.py
mfkan/training/: __init__.py  loss.py  trainer.py
mfkan/utils/: __init__.py  data.py  metrics.py
tests/: conftest.py  test_data.py  test_mfkan.py  test_training.py
